Add utility to stream compute stats file directly out as viz plugin data and clean up so everything compiles